common/force-app/main/default/objects/Opportunity/fields/Account_update_date__c.field-meta.xml
<CustomField>
    <fullName>Account_update_date__c</fullName>
    <inlineHelpText>This field will capture the last time the related accounts email or investment opt in status was updated from the account. This relates to the &quot;Account: Update related opps&quot; Flow</inlineHelpText>
    <label>Account update date</label>
    <type>DateTime</type>
</CustomField>