common/force-app/main/default/objects/Opportunity/fields/Amended_UC_Carrara__c.field-meta.xml
<CustomField>
    <fullName>Amended_UC_Carrara__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amended UC Carrara</label>
    <type>Checkbox</type>
</CustomField>