common/force-app/main/default/objects/Opportunity/fields/amount_committed_minus_amount_contribute__c.field-meta.xml
<CustomField>
    <fullName>amount_committed_minus_amount_contribute__c</fullName>
    <formula>Total_Product_Price__c -  Unit_Certificate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>amount committed minus amount contribute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>