common/force-app/main/default/objects/Opportunity/fields/Amount_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Amount_Shortfall__c</fullName>
    <formula>Amount +  VentureCrowd_Fee__c -  Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>