common/force-app/main/default/objects/Opportunity/fields/Associated_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_Type__c</fullName>
    <label>Associated Product Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>