common/force-app/main/default/objects/Opportunity/fields/Balance_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_Deposit_Due_Date__c</fullName>
    <label>Balance Deposit Due Date</label>
    <type>Date</type>
</CustomField>