common/force-app/main/default/objects/Opportunity/fields/Balance_of_Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_of_Deposit_Paid__c</fullName>
    <inlineHelpText>The amount of the balance of the deposit paid. 
Confirmation must be received by the Lawyers and filed against the Opportunity record.</inlineHelpText>
    <label>Balance of Deposit Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>