common/force-app/main/default/objects/Opportunity/fields/BPAY_Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>BPAY_Biller_Code__c</fullName>
    <formula>Account.BPAY_Biller_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPAY Biller Code</label>
    <type>Text</type>
</CustomField>