common/force-app/main/default/objects/Opportunity/fields/BPAY_CRN__c.field-meta.xml
<CustomField>
    <fullName>BPAY_CRN__c</fullName>
    <formula>Account.BPAY_CRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPAY CRN</label>
    <type>Text</type>
</CustomField>