common/force-app/main/default/objects/Opportunity/fields/Bpay_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Bpay_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this to send the bpay creds email to investor</inlineHelpText>
    <label>Bpay Email Sent</label>
    <type>Checkbox</type>
</CustomField>