common/force-app/main/default/objects/Opportunity/fields/Building_Pest_Clause_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Building_Pest_Clause_Due_Date__c</fullName>
    <inlineHelpText>Add the Building &amp; Pest clause due date according to the executed contract</inlineHelpText>
    <label>Building &amp; Pest or Other Clause Due Date</label>
    <type>Date</type>
</CustomField>