common/force-app/main/default/objects/Opportunity/fields/Class_of_Unit__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Unit__c</fullName>
    <label>Type of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinary Equity</fullName>
            </value>
            <value>
                <fullName>A Class</fullName>
            </value>
            <value>
                <fullName>B Class</fullName>
            </value>
            <value>
                <fullName>C Class</fullName>
            </value>
            <value>
                <fullName>D Class</fullName>
            </value>
            <value>
                <fullName>E Class</fullName>
            </value>
            <value>
                <fullName>Ordinary Units</fullName>
            </value>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>J Class</fullName>
            </value>
            <value>
                <fullName>Limited Partnership Interest</fullName>
            </value>
            <value>
                <fullName>Ordinary Shares</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>G Class</fullName>
            </value>
            <value>
                <fullName>F Class</fullName>
            </value>
            <value>
                <fullName>Secured Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>