common/force-app/main/default/objects/Opportunity/fields/Close_Date_Alert__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Alert__c</fullName>
    <description>Green if we have time, red if we are late.</description>
    <formula>IF(
    OR(
        ISPICKVAL(StageName, &quot;Closed Won&quot;), 
        ISPICKVAL(StageName, &quot;Closed Lost&quot;),
        ISPICKVAL(StageName, &quot;Settled&quot;),
        AND(
            NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
            NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
            NOT(ISPICKVAL(StageName, &quot;Settled&quot;)),
            CloseDate &gt; TODAY()
        )
    ),
    &quot;🟢 On Time&quot;,
    IF(
        AND(
            NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
            NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
            NOT(ISPICKVAL(StageName, &quot;Settled&quot;)),
            NOT(ISBLANK(CloseDate)),
            CloseDate &lt;= TODAY()
        ),
        &quot;🔴 Past Closed Date&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green if we have time, red if we are late.</inlineHelpText>
    <label>Close Date Alert</label>
    <type>Text</type>
</CustomField>