common/force-app/main/default/objects/Opportunity/fields/Closed_WON__c.field-meta.xml
<CustomField>
    <fullName>Closed_WON__c</fullName>
    <formula>IF ((TEXT(StageName) = &apos;Closed Won&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed WON</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>