common/force-app/main/default/objects/Opportunity/fields/Closed_Won_Stages__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Stages__c</fullName>
    <label>Closed Won Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially Redeemed</fullName>
            </value>
            <value>
                <fullName>Fully Redeemed</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Rollover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>