common/force-app/main/default/objects/Opportunity/fields/CM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CM_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Assigned</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>CM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>