common/force-app/main/default/objects/Opportunity/fields/CM_Eligible_Commission__c.field-meta.xml
<CustomField>
    <fullName>CM_Eligible_Commission__c</fullName>
    <formula>IF( Associated_Product_Type__c = &quot;VC Product&quot; , Amount * Owner.VC_Commission__c  ,
IF( Associated_Product_Type__c = &quot;Property Product&quot; , Amount * Owner.Property_Commission__c , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Eligible Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>