common/force-app/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Founder comments</description>
    <inlineHelpText>Founder comments</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>