common/force-app/main/default/objects/Opportunity/fields/Commit_to_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commit to Forecast</label>
    <type>Checkbox</type>
</CustomField>