common/force-app/main/default/objects/Opportunity/fields/Compounding__c.field-meta.xml
<CustomField>
    <fullName>Compounding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if the Carrara investment if chosen to be compounding by the investor.</inlineHelpText>
    <label>Compounding</label>
    <type>Checkbox</type>
</CustomField>