common/force-app/main/default/objects/Opportunity/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <description>The Date the contract has been executed</description>
    <inlineHelpText>The Date the contract has been executed</inlineHelpText>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>