common/force-app/main/default/objects/Opportunity/fields/Contracts_Administration_Fee_n__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Administration_Fee_n__c</fullName>
    <label>Contracts Administration Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>