common/force-app/main/default/objects/Opportunity/fields/contributed__c.field-meta.xml
<CustomField>
    <fullName>contributed__c</fullName>
    <formula>Amount  /  Unit_Certificate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% contributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>