common/force-app/main/default/objects/Opportunity/fields/Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee__c</fullName>
    <label>Contribution_Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>