common/force-app/main/default/objects/Opportunity/fields/Contribution_Fee_Original_Currency_Field__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee_Original_Currency_Field__c</fullName>
    <description>This is a temp field. Since contribution Fee Original is not currency, This field field created to include in the email template temporarily</description>
    <formula>Contribution_Fee_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Fee Original_Currency Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>