common/force-app/main/default/objects/Opportunity/fields/CRC_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CRC_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRC Assigned</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>CRC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>