common/force-app/main/default/objects/Opportunity/fields/CRC_Eligible_Commission__c.field-meta.xml
<CustomField>
    <fullName>CRC_Eligible_Commission__c</fullName>
    <formula>Case(StageName, 
&quot;Why Appt Set Pending&quot; , 0, 
&quot;Decision Appt Set Pending&quot;,  CRC_Assigned__r.CRC_Commission__c ,
&quot;Closing Pending&quot;, CRC_Assigned__r.CRC_Commission__c, 
&quot;Application Received&quot;, CRC_Assigned__r.CRC_Commission__c, 
&quot;Receipt Issued&quot;, CRC_Assigned__r.CRC_Commission__c,
&quot;Closed Lost&quot;, 0, 
&quot;Closed Won&quot;, CRC_Assigned__r.CRC_Commission__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRC Eligible Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>