common/force-app/main/default/objects/Opportunity/fields/Create_EOI_Application__c.field-meta.xml
<CustomField>
    <fullName>Create_EOI_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create EOI Application</label>
    <type>Checkbox</type>
</CustomField>