common/force-app/main/default/objects/Opportunity/fields/CSF_Nominees_Share_Cert__c.field-meta.xml
<CustomField>
    <fullName>CSF_Nominees_Share_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Cert (GSL As Nominee)</label>
    <type>Checkbox</type>
</CustomField>