common/force-app/main/default/objects/Opportunity/fields/Current_Holding__c.field-meta.xml
<CustomField>
    <fullName>Current_Holding__c</fullName>
    <label>Current Holding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>