common/force-app/main/default/objects/Opportunity/fields/Current_Holdings__c.field-meta.xml
<CustomField>
    <fullName>Current_Holdings__c</fullName>
    <label>Current Holdings</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>