common/force-app/main/default/objects/Opportunity/fields/Current_Unit_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Certificate__c</fullName>
    <label>Current Unit Certificate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>