common/force-app/main/default/objects/Opportunity/fields/Current_Unit_Certificate_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Certificate_Date__c</fullName>
    <label>Current Unit Certificate Date</label>
    <type>Date</type>
</CustomField>