common/force-app/main/default/objects/Opportunity/fields/Date_Banked__c.field-meta.xml
<CustomField>
    <fullName>Date_Banked__c</fullName>
    <label>Date Banked</label>
    <type>Date</type>
</CustomField>