common/force-app/main/default/objects/Opportunity/fields/Date_of_Balance_of_Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Balance_of_Deposit_Paid__c</fullName>
    <inlineHelpText>The date the balance deposit was paid. Confirmation must be received by the Lawyers and filed against the Opportunity record.</inlineHelpText>
    <label>Date of Balance of Deposit Paid</label>
    <type>Date</type>
</CustomField>