common/force-app/main/default/objects/Opportunity/fields/Date_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Refund__c</fullName>
    <label>Date of Refund</label>
    <type>Date</type>
</CustomField>