common/force-app/main/default/objects/Opportunity/fields/Date_Referral_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Referral_Commission_Paid__c</fullName>
    <inlineHelpText>When this has been paid please save it against the referring partner&apos;s account.</inlineHelpText>
    <label>Date Referral Commission Paid</label>
    <type>Date</type>
</CustomField>