common/force-app/main/default/objects/Opportunity/fields/Days_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Creation__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(StageName, &quot;Closed Lost&quot;)
),
&quot;🟢 Lost&quot;,
IF(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
&quot;🟢 Closed Won&quot;,
IF(
(TODAY() - DATEVALUE(CreatedDate)) &lt;= 3,
&quot;🟢 on time&quot;,
IF(
AND(
(TODAY() - DATEVALUE(CreatedDate)) &gt; 3,
(TODAY() - DATEVALUE(CreatedDate)) &lt;= 7
),
&quot;🟠 over 3d&quot;,
IF(
(TODAY() - DATEVALUE(CreatedDate)) = 8,
&quot;🔴 8d&quot;,
IF(
(TODAY() - DATEVALUE(CreatedDate)) &gt; 8,
&quot;over 8d&quot;,
&quot;&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Creation</label>
    <type>Text</type>
</CustomField>