common/force-app/main/default/objects/Opportunity/fields/Days_w_o_activity__c.field-meta.xml
<CustomField>
    <fullName>Days_w_o_activity__c</fullName>
    <description>Days without activity</description>
    <formula>TODAY() -  LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days without activity</inlineHelpText>
    <label>Days w/o activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>