common/force-app/main/default/objects/Opportunity/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <formula>Primary_Contact__r.Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field pulls in the Deceased value from the related contact.</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>