common/force-app/main/default/objects/Opportunity/fields/Defined_Term__c.field-meta.xml
<CustomField>
    <fullName>Defined_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if investment is for a defined term. If the investment is set to a defined term ensure that you also update the &quot;Maturation Date&quot;.</inlineHelpText>
    <label>Defined Term</label>
    <type>Checkbox</type>
</CustomField>