common/force-app/main/default/objects/Opportunity/fields/Delete_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Delete_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked then we will delete this opp by trigger</description>
    <label>Delete Opportunity</label>
    <type>Checkbox</type>
</CustomField>