common/force-app/main/default/objects/Opportunity/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donation</label>
    <type>Checkbox</type>
</CustomField>