common/force-app/main/default/objects/Opportunity/fields/Donation_Related_Investment_Opp__c.field-meta.xml
<CustomField>
    <fullName>Donation_Related_Investment_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>when an investor submits an application from portal and selects a donation amount, this field will be linked to either donation opp or related invested opp.</inlineHelpText>
    <label>Donation / Related Investment Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Donation / Related Investment Opp)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>