common/force-app/main/default/objects/Opportunity/fields/EIC_Property__c.field-meta.xml
<CustomField>
    <fullName>EIC_Property__c</fullName>
    <formula>Primary_Contact__r.EIC_Property__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIC Property</label>
    <type>Checkbox</type>
</CustomField>