common/force-app/main/default/objects/Opportunity/fields/EIC_STartup__c.field-meta.xml
<CustomField>
    <fullName>EIC_STartup__c</fullName>
    <formula>Primary_Contact__r.EIC_Startup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIC Startup</label>
    <type>Checkbox</type>
</CustomField>