common/force-app/main/default/objects/Opportunity/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>this email id is passed from Symphony</description>
    <inlineHelpText>ADMIN FIELD. Passed from Symphony App</inlineHelpText>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>