common/force-app/main/default/objects/Opportunity/fields/EOI_Offer_Document__c.field-meta.xml
<CustomField>
    <fullName>EOI_Offer_Document__c</fullName>
    <label>EOI/Offer Document</label>
    <type>Url</type>
</CustomField>