common/force-app/main/default/objects/Opportunity/fields/EOI_Received__c.field-meta.xml
<CustomField>
    <fullName>EOI_Received__c</fullName>
    <inlineHelpText>The date the EOI was received back from the buyer and signed</inlineHelpText>
    <label>EOI Received</label>
    <type>Date</type>
</CustomField>