common/force-app/main/default/objects/Opportunity/fields/EOI_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Sent_Date__c</fullName>
    <inlineHelpText>The date the Expression of Interest was sent to the buyer for execution</inlineHelpText>
    <label>EOI Sent Date</label>
    <type>Date</type>
</CustomField>