common/force-app/main/default/objects/Opportunity/fields/ESIC_Offset__c.field-meta.xml
<CustomField>
    <fullName>ESIC_Offset__c</fullName>
    <label>ESIC Offset</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>