common/force-app/main/default/objects/Opportunity/fields/Establishment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee__c</fullName>
    <formula>(0.0165)   *  Total_Product_Price__c</formula>
    <inlineHelpText>Excluding GST</inlineHelpText>
    <label>Establishment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>