common/force-app/main/default/objects/Opportunity/fields/Establishment_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee_Amount__c</fullName>
    <inlineHelpText>Excluding GST</inlineHelpText>
    <label>Establishment Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>