common/force-app/main/default/objects/Opportunity/fields/Establishment_Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee_Due_Date__c</fullName>
    <label>Establishment Fee Due Date</label>
    <type>Date</type>
</CustomField>