common/force-app/main/default/objects/Opportunity/fields/Finance_Clause_Due__c.field-meta.xml
<CustomField>
    <fullName>Finance_Clause_Due__c</fullName>
    <inlineHelpText>Add the finance clause due date according to the executed contract</inlineHelpText>
    <label>Finance Clause Due</label>
    <type>Date</type>
</CustomField>