common/force-app/main/default/objects/Opportunity/fields/First_Investment__c.field-meta.xml
<CustomField>
    <fullName>First_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if this opportunity is the first investment and is a referred investor.</inlineHelpText>
    <label>First Investment?</label>
    <type>Checkbox</type>
</CustomField>