common/force-app/main/default/objects/Opportunity/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <inlineHelpText>This field is utilised by the CRC to follow up an investor 90 days after the opportunities close date.</inlineHelpText>
    <label>Follow-Up Date</label>
    <type>Date</type>
</CustomField>