common/force-app/main/default/objects/Opportunity/fields/Forecast_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Registration_Date__c</fullName>
    <formula>Invested_Product_ADMIN_FIELD__r.Masterplan__r.Forecast_Registration_Date_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Registration Date</label>
    <type>Date</type>
</CustomField>