common/force-app/main/default/objects/Opportunity/fields/Forecast_settlement_date_n__c.field-meta.xml
<CustomField>
    <fullName>Forecast_settlement_date_n__c</fullName>
    <label>Forecast settlement date</label>
    <type>Date</type>
</CustomField>