common/force-app/main/default/objects/Opportunity/fields/Founder_EOI__c.field-meta.xml
<CustomField>
    <fullName>Founder_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>