common/force-app/main/default/objects/Opportunity/fields/Founder_Raise__c.field-meta.xml
<CustomField>
    <fullName>Founder_Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Opportunities (Founder Raise)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>