common/force-app/main/default/objects/Opportunity/fields/Founder_status__c.field-meta.xml
<CustomField>
    <fullName>Founder_status__c</fullName>
    <description>Founder to update the status of this opportunity</description>
    <inlineHelpText>Founder to update the status of this opportunity</inlineHelpText>
    <label>Founder status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>