common/force-app/main/default/objects/Opportunity/fields/Funds_received_in_Bank__c.field-meta.xml
<CustomField>
    <fullName>Funds_received_in_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be updated by Finance Department</inlineHelpText>
    <label>Funds Received in Bank</label>
    <type>Checkbox</type>
</CustomField>