common/force-app/main/default/objects/Opportunity/fields/FY21_ESIC_Offset__c.field-meta.xml
<CustomField>
    <fullName>FY21_ESIC_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Generate FY21 ESIC Offset determination for unitholders</inlineHelpText>
    <label>FY21 ESIC Offset</label>
    <type>Checkbox</type>
</CustomField>